--- a/static/styles/themes.css
+++ b/static/styles/themes.css
@@ -8,6 +8,12 @@
   margin-bottom: 12px;
 }
 
+.map-headline  {
+  margin-top: 25px;
+  color: #fff;
+  text-align: center;
+}
+
 .offer,
 .theme {
   margin: auto;
@@ -24,7 +30,6 @@
 
 .offer.active {
   background-color: #fff;
-  border: 4px solid #008ced;
   color: #008ced;
   cursor: default;
 }
@@ -123,6 +128,11 @@
   margin-left: 5%;
 }
 
+.text-theme-title,
+.text-offer-title {
+  font-style: italic;
+}
+
 .theme {
   height: 250px;
   width: 250px;
@@ -192,15 +202,9 @@
   height: 400px;
 }
 
-#map-headline,
 #offers-headline  {
   margin-top: 25px;
   color: #fff;
-}
-
-#map-headline-theme-title,
-#offers-headline-theme-title {
-  font-style: italic;
 }
 
 #offer-container {
