bugfixes, layout fixtures and simplification of table relationships

--- a/static/styles/themes.css
+++ b/static/styles/themes.css
@@ -1,4 +1,8 @@
 .attributes-modal-italic,
+.attributes-modal-text-offer-featuretype,
+.attributes-modal-text-offer-object,
+.attributes-modal-text-offer-title,
+.attributes-modal-text-offer-type,
 .popup-italic,
 .text-theme-title,
 .text-offer-title {
