--- a/templates/themes.html
+++ b/templates/themes.html
@@ -100,7 +100,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">{{ _('Attribute zu Objekt') }} <span class="attributes-modal-text-offer-object"></span> {{ _('aus') }} <span class="attributes-modal-text-offer-type"></span> {{ _('zum Angebot') }} <span class="attributes-modal-text-offer-title text-offer-title"></span></h4>
+            <h4 class="modal-title">{{ _('Attribute zu Objekt') }} <span class="attributes-modal-text-offer-object"></span> {{ _('aus') }} <span class="attributes-modal-text-offer-type"></span> ({{ _('Feature-Type') }} <span class="attributes-modal-text-offer-featuretype"></span>) {{ _('zum Angebot') }} <span class="attributes-modal-text-offer-title"></span></h4>
           </div>
           <div class="modal-body">
             <table>
