--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -278,11 +278,11 @@
         </div>
       {% endfor %}
     </div>
-    <div id="loading-modal" class="modal fade" role="dialog" tabindex="-1">
+    <div id="loading-modal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">{{ _('Bitte warten') }}…</h4>
+            <h4 class="modal-title">{{ _('Bitte warten, Kataloginhalte werden geladen') }}…</h4>
           </div>
           <div class="modal-body">
             <div class="progress progress-striped active modal-progress">
