--- a/templates/themes.html
+++ b/templates/themes.html
@@ -211,11 +211,11 @@
         </div>
       </div>
     </div>
-    <div id="loading-modal" class="modal fade" role="dialog" tabindex="-1">
+    <div id="loading-modal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">{{ _('Bitte warten') }}…</h4>
+            <h4 class="modal-title">{{ _('Bitte warten, Karte wird aktualisiert') }}…</h4>
           </div>
           <div class="modal-body">
             <div class="progress progress-striped active modal-progress">
