--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -85,6 +85,10 @@
   margin: 0 auto;
 }
 
+#search-input::-ms-clear {
+  display: none;
+}
+
 #search-input:not(.mobile) {
   width: 300px;
   margin-top: 20px;
