--- a/static/styles/themes.css
+++ b/static/styles/themes.css
@@ -166,6 +166,10 @@
   width: 250px;
 }
 
+#address-input::-ms-clear {
+  display: none;
+}
+
 #address-input:not(.mobile) {
   width: 250px;
   margin-top: 20px;
