--- a/static/styles/themes.css
+++ b/static/styles/themes.css
@@ -1,8 +1,7 @@
 .attributes-modal-italic,
 .attributes-modal-text-offer-featuretype,
-.attributes-modal-text-offer-object,
+.attributes-modal-text-offer-theme,
 .attributes-modal-text-offer-title,
-.attributes-modal-text-offer-type,
 .popup-italic,
 .text-theme-title,
 .text-offer-title {
@@ -20,7 +19,6 @@
 }
 
 .map-headline  {
-  margin-top: 25px;
   color: #fff;
   text-align: center;
 }
@@ -74,6 +72,11 @@
   margin-top: 25px;
 }
 
+.offer-logo {
+  height: 20px;
+  margin-right: 5px;
+}
+
 .offer-title,
 .offer-title-flipped,
 .theme-title,
@@ -109,17 +112,17 @@
 
 .slick-prev,
 .slick-next {
-  height: 24px;
-  width: 24px;
-  line-height: 24px;
+  height: 34px;
+  width: 34px;
+  line-height: 34px;
 }
 
 .slick-prev:before,
 .slick-next:before {
   color: #006cb7;
   opacity: 1;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 30px;
+  line-height: 34px;
 }
 
 .slick-prev:before,
@@ -205,7 +208,7 @@
 }
 
 #map-container {
-  margin: 60px 0 20px 0;
+  margin: 40px 0 30px 0;
 }
 
 #map {
@@ -222,12 +225,12 @@
 }
 
 #offers-headline  {
-  margin-top: 25px;
+  margin-top: 40px;
   color: #fff;
 }
 
 #offer-container {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 #results {
